--- a/index.html
+++ b/index.html
@@ -1,1 +1,235 @@
-e
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charSet="utf-8" />
+    <title>Δzyr - Defi Bitcoin Ecosystem with Delta Zyr</title>
+    <meta name="Δzyr (Delta Zyr)" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./CSS/img/favicon.svg" />
+    <meta name="next-head-count" content="5" />
+    <link data-next-font="" rel="preconnect" href="/" crossorigin="anonymous" />
+    <link rel="preload" href="./CSS/style1.css" as="style" />
+    <link rel="stylesheet" href="./CSS/style1.css" data-n-g="" />
+    <link rel="preload" href="./CSS/style2.css" as="style" />
+    <link rel="stylesheet" href="./CSS/style2.css" data-n-p="" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">    
+    <noscript data-n-css=""></noscript>
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:description" content="Bringing DeFi to the Bitcoin ecosystem, facilitating faster and easier transactions, and generating profits by providing liquidity">
+    <meta property="og:site_name" content="Δzyr">
+    <meta property="og:image" content="https://aldeneth.github.io/delta_zyr/CSS/img/og_image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bringing DeFi to the Bitcoin ecosystem, facilitating faster and easier transactions, and generating profits by providing liquidity">
+    <meta name="robots" content="max-image-preview:large">
+</head>
+
+<body>
+    <div id="__next">
+        <div class="Header_header__R_kkv" style="background:rgba(255, 151, 24, 0.3)">
+            <div class="Header_headerLeft__5o9CR flex-row-v-center"><img alt="logo" loading="lazy" width="100"
+                height="80" decoding="async" data-nimg="1" class="Header_bigLogo__GemIe" style="color:transparent"
+                src="./CSS/img/logo + text white.svg" />
+            <img alt="logo" loading="lazy" width="80" height="80" decoding="async" data-nimg="1"
+                class="Header_smallLogo__oEnv8" style="color:transparent" src="./CSS/img/logo + text white.svg" />
+            </div>
+            <div class="Header_linkContainer__IRPSl">
+                <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c Header_selected__pE60r"
+                        target="" href="/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
+                        fill="#EAC249" width="16" height="16">
+                        <path
+                            d="M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5V432c0 44.2 35.8 80 80 80h288c44.2 0 80-35.8 80-80V245.5l24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432V204.8L288 55.5l176 149.3V432c0 17.7-14.3 32-32 32h-48V312c0-22.1-17.9-40-40-40H232c-22.1 0-40 17.9-40 40v152h-48c-17.7 0-32-14.3-32-32zm128 32V320h96v144h-96z">
+                        </path>
+                    </svg><span class="Header_name__T3K3l">Home</span></a>
+                    <div class="Header_divider__0g0gd"></div>
+                </div>
+                <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c " target=""
+                        href="/delta_zyr/swap.html"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path fill="#ffffff" d="M32 96l320 0V32c0-12.9 7.8-24.6 19.8-29.6s25.7-2.2 34.9 6.9l96 96c6 6 9.4 14.1 9.4 22.6s-3.4 16.6-9.4 22.6l-96 96c-9.2 9.2-22.9 11.9-34.9 6.9s-19.8-16.6-19.8-29.6V160L32 160c-17.7 0-32-14.3-32-32s14.3-32 32-32zM480 352c17.7 0 32 14.3 32 32s-14.3 32-32 32H160v64c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-96-96c-6-6-9.4-14.1-9.4-22.6s3.4-16.6 9.4-22.6l96-96c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 64H480z"/></svg><span class="Header_name__T3K3l">Swap</span></a>
+                    <div class="Header_divider__0g0gd"></div>
+                </div>
+                <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c " target=""
+                        href="/delta_zyr/pools.html"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path fill="#ffffff" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM228 104c0-11-9-20-20-20s-20 9-20 20v14c-7.6 1.7-15.2 4.4-22.2 8.5c-13.9 8.3-25.9 22.8-25.8 43.9c.1 20.3 12 33.1 24.7 40.7c11 6.6 24.7 10.8 35.6 14l1.7 .5c12.6 3.8 21.8 6.8 28 10.7c5.1 3.2 5.8 5.4 5.9 8.2c.1 5-1.8 8-5.9 10.5c-5 3.1-12.9 5-21.4 4.7c-11.1-.4-21.5-3.9-35.1-8.5c-2.3-.8-4.7-1.6-7.2-2.4c-10.5-3.5-21.8 2.2-25.3 12.6s2.2 21.8 12.6 25.3c1.9 .6 4 1.3 6.1 2.1l0 0 0 0c8.3 2.9 17.9 6.2 28.2 8.4V312c0 11 9 20 20 20s20-9 20-20V298.2c8-1.7 16-4.5 23.2-9c14.3-8.9 25.1-24.1 24.8-45c-.3-20.3-11.7-33.4-24.6-41.6c-11.5-7.2-25.9-11.6-37.1-15l-.7-.2c-12.8-3.9-21.9-6.7-28.3-10.5c-5.2-3.1-5.3-4.9-5.3-6.7c0-3.7 1.4-6.5 6.2-9.3c5.4-3.2 13.6-5.1 21.5-5c9.6 .1 20.2 2.2 31.2 5.2c10.7 2.8 21.6-3.5 24.5-14.2s-3.5-21.6-14.2-24.5c-6.5-1.7-13.7-3.4-21.1-4.7V104z"/></svg><span class="Header_name__T3K3l">Pools</span></a>
+                    <div class="Header_divider__0g0gd"></div>
+                </div>
+                <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c " target=""
+                        href="/#"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 448 512"><path fill="#ffffff" d="M160 80c0-26.5 21.5-48 48-48h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V80zM0 272c0-26.5 21.5-48 48-48H80c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V272zM368 96h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H368c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48z"/></svg><span class="Header_name__T3K3l">Dashboard</span></a>
+                </div>                                 
+            </div>
+            <div class="Header_right__R1PDz">
+                <a href="/pools.html" class="button border-btn no-underline">Launch App</a>
+            </div>
+        </div>
+        <div class="Header_headerBlock__BvKxA">
+            <div class="Header_bodyBg__KCRgW"></div>
+        </div>
+        <div class="main-container home">
+            <div class="home-banner mt64 atom-banner">
+                <div class="banner-item radius-20 border-01 flex-column-between p32 align-start clickable">
+                    <img src="./CSS/img/banner.svg" alt="" class="bg"/>
+                    <div class="mt24">                        
+                        <div class="font24">Delta Zyr (Δzyr)</div>
+                        <div class="font20 white07 mt12">Defi Bitcoin Ecosystem with Delta Zyr!</div>
+                    </div>
+                    <div class="flex-column align-start">
+                        <a href="./swap.html" class="button border-btn-main gap-8">
+                            Start Trading Now
+                            <div class="flex-row-v-center gap-4">
+                                <span role="img" aria-label="arrow-right" class="anticon anticon-arrow-right">
+                                    <svg viewBox="64 64 896 896" focusable="false" data-icon="arrow-right" width="1em" height="1em" fill="currentColor" aria-hidden="true">
+                                        <path d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"></path>
+                                    </svg>
+                                </span>
+                            </div>
+                        </a>
+                    </div>                    
+                </div>
+            </div>
+            <div class="chain-list-header">BRC20 INDEX</div>
+            <div class="Home-latest-info-container default-container">            
+                <div class="chain-list-item" style="justify-content: center">
+                    <div class="chain-list-item__right">
+                      <span class="chain-name">Transaction</span>
+                      <span class="chain-name">47,888,721</span>                      
+                    </div>
+                </div>
+                <div class="chain-list-item" style="justify-content: center">
+                    <div class="chain-list-item__right">
+                      <span class="chain-name">Total Marketcap</span>
+                      <span class="chain-name">$5,864,625,369</span>                      
+                    </div>
+                </div>
+                <div class="chain-list-item" style="justify-content: center">
+                    <div class="chain-list-item__right">
+                      <span class="chain-name">24H Volume</span>
+                      <span class="chain-name">$10,786,926</span>                      
+                    </div>
+                </div>
+            </div>
+            <div class="flex-row-stretch justify-around radius-20 p48 linear-gradient-container">
+                <div class="linear-gradient-bg"></div>
+                <div class="linear-gradient-blur"></div>
+                <div class="flex-column-between gap-32">
+                    <div style="z-index:1" class="flex-column"><span class="linear-gradient-text font32">Delta Zyr (Δzyr)</span><span class="white08 font24 mt16">Streamlining the BRC20 Experience for Effortless Swiftness!</span>
+                        <div class="flex-column gap-16 linear-gradient-text mt48 font20">
+                            <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
+                                    decoding="async" data-nimg="1" style="color:transparent"
+                                    src="./CSS/img/check.svg" />Familiar and Friendly Interface</div>
+                            <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
+                                    decoding="async" data-nimg="1" style="color:transparent"
+                                    src="./CSS/img/check.svg" />Integrated Trading Tools and Analytics</div>
+                            <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
+                                    decoding="async" data-nimg="1" style="color:transparent"
+                                    src="./CSS/img/check.svg" />Liquidity Pool in BRC20</div>
+                            <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
+                                    decoding="async" data-nimg="1" style="color:transparent"
+                                    src="./CSS/img/check.svg" />100% of Δzyr fees go to Liquidity Providers (LPs)</div>
+                            <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
+                                    decoding="async" data-nimg="1" style="color:transparent"
+                                    src="./CSS/img/check.svg" />Crosschain Convenience</div>
+                        </div>
+                    </div>
+                    <div class="flex-row-v-center gap-16 download-bar-new flex-wrap">
+                        <a target="_blank" href="https://twitter.com/Delta_zyr" class="join"><img alt="twitter" loading="lazy" width="28" height="28"
+                            decoding="async" data-nimg="1"
+                            style="color:transparent;overflow:hidden;min-width:28px;min-height:28px"
+                            src="./CSS/img/twitter.svg" /><span>Join Twitter</span></a>
+                        <a target="_blank" href="https://discord.gg/9tds4ccY" class="join"><img alt="discord" loading="lazy" width="28" height="28"
+                                decoding="async" data-nimg="1" style="color:transparent"
+                                src="./CSS/img/discord.svg" /><span>Join Discord</span></a>
+                    </div>
+                </div>
+                <div class="flex-column-v-center overflow-hidden hide-in-m" style="min-width:237px">
+                    <div class="loop-image-container" style="width:237px;height:421px"><img alt="" loading="lazy"
+                            width="237" height="421" decoding="async" data-nimg="1"
+                            class="loop-image-item loop-image-item-active" style="color:transparent"
+                            src="./CSS/img/logo white.svg" /><img alt=""
+                            loading="lazy" width="237" height="421" decoding="async" data-nimg="1"
+                            class="loop-image-item " style="color:transparent"
+                            src="./CSS/img/ΔUSD.svg" />
+                </div>
+            </div>
+        </div>
+        <section class="chain-list-section elementor-section elementor-top-section elementor-element elementor-element-98e7638 elementor-section-height-min-height elementor-section-items-top elementor-section-content-top elementor-section-boxed elementor-section-height-default">
+            <h1>Cross-Chain Compatible</h1>
+            <div class="chain-list-wrapper">
+                  <!-- Bitcoin -->
+                <div class="chain-list-item bitcoin" style="--accent-color: rgb(199,119,22, 0.7); --gradient-from: rgba(252, 220, 84, 0); --gradient-to: rgb(199,119,22, 1);">
+                <img src="./CSS/img/bitcoin-logo.svg">
+                <div class="chain-list-item__right">
+                    <span class="chain-name">Bitcoin</span>
+                    <a href="" class="chain-button" style="--accent-color: rgb(199,119,22, 1)">
+                        Launch App
+                    </a>
+                </div>
+                </div>
+                <!-- Ethereum -->
+                <div class="chain-list-item ethereum" style="--accent-color: rgba(255, 255, 255, 0.5); --gradient-from: rgba(255, 255, 255, 0); --gradient-to: rgb(255,255,255, 1);">
+                <img src="./CSS/img/ethereum.webp">
+                <div class="chain-list-item__right">
+                    <span class="chain-name">Ethereum</span>
+                    <a href="#" class="chain-button" style="--accent-color: rgba(255, 255, 255)">
+                    Launch App
+                    </a>
+                </div>
+                </div>
+                <!-- Arbitrum -->
+                <div class="chain-list-item arbitrum" style="--accent-color: rgba(80, 158, 234, 0.5); --gradient-from: rgba(80, 158, 234, 0); --gradient-to: rgba(80, 158, 234, 1);">
+                <img src="./CSS/img/arbitrum.webp">
+                <div class="chain-list-item__right">
+                    <span class="chain-name">Arbitrum</span>
+                    <a href="#" class="chain-button" style="--accent-color: rgba(80, 158, 234)">
+                    Launch App
+                    </a>
+                    </div>
+                </div>
+                <!-- Avalanche -->
+                <div class="chain-list-item avalanche" style="--accent-color: rgba(255, 4, 32, 0.5); --gradient-from: rgba(255, 4, 32, 0); --gradient-to: rgba(255, 4, 32, 0.8);">
+                <img src="./CSS/img/avalanche-logo.svg">
+                <div class="chain-list-item__right">
+                    <span class="chain-name">Avalanche</span>
+                    <a href="#" class="chain-button" style="--accent-color: rgba(255, 4, 32, 0.8)">
+                    Launch App
+                    </a>
+                </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer class="Footer_footer__oaUOW flex-row-center">
+            <div class="Footer_footerLinkLineContainer__zGGMx">
+                <div style="color:#AAAAAA" class="Footer_flexRowCenter__WJZTF gap32">
+                    <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Documentation</a>
+                    <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Privacy Policy</a>
+                    <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Terms of Service</a>
+                </div>
+            </div>
+            <div class="Footer_iconLinks__jpfnI flex-row-center flex-row-center">
+                <a href="#" class="flex-row-v-center " target="_blank" rel="noreferrer">
+                    <img alt="Gitbook" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
+                        style="color:transparent" src="./CSS/img/gitbook.svg" />
+                </a>
+                <a href="https://github.com/" class="flex-row-v-center " target="_blank" rel="noreferrer">
+                    <img alt="Github" loading="lazy" width="22" height="22" decoding="async" data-nimg="1"
+                        style="color:transparent" src="./CSS/img/icon-github.svg" />
+                </a>
+                <a href="https://discord.com/invite/9tds4ccY" class="flex-row-v-center " target="_blank" rel="noreferrer">
+                    <img alt="Discord" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
+                        style="color:transparent" src="./CSS/img/discord.svg" />
+                </a>
+                <a href="https://twitter.com/Delta_zyr" class="flex-row-v-center " target="_blank" rel="noreferrer">
+                    <img alt="Twitter" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
+                        style="color:transparent" src="./CSS/img/twitter.svg" />
+                </a>
+            </div>
+    </footer>
+</body>
+
+</html>
