--- a/pools.html
+++ b/pools.html
@@ -51,7 +51,7 @@
                 class="Header_smallLogo__oEnv8" style="color:transparent" src="./CSS/img/logo + text white.svg" />
             </div>
             <div class="Header_linkContainer__IRPSl">
-                <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c" target="" href="/delta_zyr"><svg
+                <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c" target="" href="/"><svg
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="#ffffff" width="16"
                             height="16">
                             <path
