--- a/pools.html
+++ b/pools.html
@@ -418,7 +418,7 @@
                                                 style="color: transparent;"></div>
                                     </div>
                                     <div>
-                                        <div class="sc-672c6fcf-0 hRCscX"><span class="sc-d66f63d2-0 OOMlf">Δzyr/BTC</span>
+                                        <div class="sc-672c6fcf-0 hRCscX"><span class="sc-d66f63d2-0 OOMlf">Δzr/BTC</span>
                                         </div>
                                         <div class="sc-672c6fcf-3 diRbSO">
                                             <div class="gap_ct"><span class="sc-1a13f6ae-2 hJUAKw"><span>Δzr </span><span
