--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,9 @@
 <head>
     <meta charSet="utf-8" />
     <title>Dashboard</title>
-    <meta name="shenlong description" content="shenlong wallet" />
+    <meta name="Δzr (Delta Zyr)" content="Δzr - Defi Bitcoin Ecosystem with Delta Zyr" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="./CSS/img/shenlong_logo.svg" />
+    <link rel="icon" href="./CSS/img/logo.svg" />
     <meta name="next-head-count" content="5" />
     <link data-next-font="" rel="preconnect" href="/" crossorigin="anonymous" />
     <link rel="preload" href="./CSS/style1.css" as="style" />
@@ -29,10 +29,10 @@
     <noscript data-n-css=""></noscript>
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr">
+    <meta property="og:title" content="Δzr - Defi Bitcoin Ecosystem with Delta Zyr">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="Bringing DeFi to the Bitcoin ecosystem, facilitating faster and easier transactions, and generating profits by providing liquidity">
-    <meta property="og:site_name" content="Δzyr">
+    <meta property="og:site_name" content="Δzr">
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,11 +45,11 @@
         <div class="Header_header__R_kkv" style="background:rgba(255, 151, 24, 0.3)">
             <div class="Header_headerLeft__5o9CR flex-row-v-center"><img alt="logo" loading="lazy" width="75"
                     height="45" decoding="async" data-nimg="1" class="Header_bigLogo__GemIe" style="color:transparent"
-                    src="./CSS/img/shenlong_logo.svg" />
+                    src="./CSS/img/logo.svg" />
                 <img alt="logo" loading="lazy" width="42" height="42" decoding="async" data-nimg="1"
-                    class="Header_smallLogo__oEnv8" style="color:transparent" src="./CSS/img/shenlong_logo.svg" />
+                    class="Header_smallLogo__oEnv8" style="color:transparent" src="./CSS/img/logo.svg" />
                 <img alt="logo" loading="lazy" width="100" height="100" decoding="async" data-nimg="1"
-                    class="Header_rightLogo__example" style="color:transparent" src="./CSS/img/shenlong_text.svg" />
+                    class="Header_rightLogo__example" style="color:transparent" src="./CSS/img/text.svg" />
             </div>
             <div class="Header_linkContainer__IRPSl">
                 <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c" target="" href="/"><svg
@@ -2087,7 +2087,7 @@
             </div>
         </div>
         <div class="Footer_iconLinks__jpfnI flex-row-center flex-row-center">
-            <a href="https://docs.shenlong.io/" class="flex-row-v-center " target="_blank" rel="noreferrer">
+            <a href="https://docs.s.io/" class="flex-row-v-center " target="_blank" rel="noreferrer">
                 <img alt="Gitbook" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
                     style="color:transparent" src="./CSS/img/gitbook.svg" />
             </a>
