--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charSet="utf-8" />
-    <title>Δzyr - Defi Bitcoin Ecosystem with Delta Zyr</title>
-    <meta name="Δzyr (Delta Zyr)" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr" />
+    <title>Δzr - Defi Bitcoin Ecosystem with Delta Zyr</title>
+    <meta name="Δzr (Delta Zyr)" content="Δzr - Defi Bitcoin Ecosystem with Delta Zyr" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./CSS/img/favicon.svg" />
     <meta name="next-head-count" content="5" />
@@ -20,10 +20,10 @@
     <noscript data-n-css=""></noscript>
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr">
+    <meta property="og:title" content="Δzr - Defi Bitcoin Ecosystem with Delta Zyr">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="Bringing DeFi to the Bitcoin ecosystem, facilitating faster and easier transactions, and generating profits by providing liquidity">
-    <meta property="og:site_name" content="Δzyr">
+    <meta property="og:site_name" content="Δzr">
     <meta property="og:image" content="https://aldeneth.github.io/delta_zyr/CSS/img/og_image.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,7 +75,7 @@
                 <div class="banner-item radius-20 border-01 flex-column-between p32 align-start clickable">
                     <img src="./CSS/img/banner.svg" alt="" class="bg"/>
                     <div class="mt24">                        
-                        <div class="font24">Delta Zyr (Δzyr)</div>
+                        <div class="font24">Delta Zyr (Δzr)</div>
                         <div class="font20 white07 mt12">Defi Bitcoin Ecosystem with Delta Zyr!</div>
                     </div>
                     <div class="flex-column align-start">
@@ -117,7 +117,7 @@
                 <div class="linear-gradient-bg"></div>
                 <div class="linear-gradient-blur"></div>
                 <div class="flex-column-between gap-32">
-                    <div style="z-index:1" class="flex-column"><span class="linear-gradient-text font32">Delta Zyr (Δzyr)</span><span class="white08 font24 mt16">Streamlining the BRC20 Experience for Effortless Swiftness!</span>
+                    <div style="z-index:1" class="flex-column"><span class="linear-gradient-text font32">Delta Zyr (Δzr)</span><span class="white08 font24 mt16">Streamlining the BRC20 Experience for Effortless Swiftness!</span>
                         <div class="flex-column gap-16 linear-gradient-text mt48 font20">
                             <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
                                     decoding="async" data-nimg="1" style="color:transparent"
@@ -130,7 +130,7 @@
                                     src="./CSS/img/check.svg" />Liquidity Pool in BRC20</div>
                             <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
                                     decoding="async" data-nimg="1" style="color:transparent"
-                                    src="./CSS/img/check.svg" />100% of Δzyr fees go to Liquidity Providers (LPs)</div>
+                                    src="./CSS/img/check.svg" />100% of Δzr fees go to Liquidity Providers (LPs)</div>
                             <div class="flex-row-v-center gap-8"><img alt="" loading="lazy" width="20" height="20"
                                     decoding="async" data-nimg="1" style="color:transparent"
                                     src="./CSS/img/check.svg" />Crosschain Convenience</div>
