--- a/pools.html
+++ b/pools.html
@@ -4,7 +4,7 @@
 <head>
     <meta charSet="utf-8" />
     <title>Pools</title>
-    <meta name="Δzyr (Delta Zyr)" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr" />
+    <meta name="Δzr (Delta Zyr)" content="Δzr - Defi Bitcoin Ecosystem with Delta Zyr" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./CSS/img/favicon.svg" />
     <meta name="next-head-count" content="5" />
@@ -29,10 +29,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Δzyr - Defi Bitcoin Ecosystem with Delta Zyr">
+    <meta property="og:title" content="Δzr - Defi Bitcoin Ecosystem with Delta Zyr">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="Bringing DeFi to the Bitcoin ecosystem, facilitating faster and easier transactions, and generating profits by providing liquidity">
-    <meta property="og:site_name" content="Δzyr">
+    <meta property="og:site_name" content="Δzr">
     <meta property="og:image" content="https://aldeneth.github.io/delta_zyr/CSS/img/og_image.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -407,7 +407,7 @@
                             <div>
                                 <div class="sc-672c6fcf-2 fLkyYK">
                                     <div class="sc-672c6fcf-1 lmWZHw">
-                                        <div class="sc-684d1fde-1 kqYVMD" colspan="1"><img alt="Δzyr" loading="lazy"
+                                        <div class="sc-684d1fde-1 kqYVMD" colspan="1"><img alt="Δzr" loading="lazy"
                                                 width="26" height="26" decoding="async" data-nimg="1"
                                                 class="sc-39a574ce-0 bIqECj sc-684d1fde-0 gkbgVw sm"
                                                 src="./CSS/img/logo black.svg"
