--- a/swap.html
+++ b/swap.html
@@ -35,7 +35,7 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="Bringing DeFi to the Bitcoin ecosystem, facilitating faster and easier transactions, and generating profits by providing liquidity">
     <meta property="og:site_name" content="Δzr">
-    <meta property="og:image" content="https://aldeneth.github.io/delta_zyr/CSS/img/og_image.png">
+    <meta property="og:image" content="deltazyrteam.github.io/CSS/img/og_image.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
