--- a/pools.html
+++ b/pools.html
@@ -43,6 +43,9 @@
 
 <body>
     <div id="__next">
+        <div class="alert-banner">
+            <div class="message">Welcome to our preview! This demo is just a taste of what's to come. Be sure to follow us on <a style="text-decoration: underline" href="https://twitter.com/Delta_zyr" target="_blank">Twitter</a> for the official launch date. Have a nice day!</div>
+        </div>
         <div class="Header_header__R_kkv" style="background:rgba(255, 151, 24, 0.3)">
             <div class="Header_headerLeft__5o9CR flex-row-v-center"><img alt="logo" loading="lazy" width="100"
                 height="80" decoding="async" data-nimg="1" class="Header_bigLogo__GemIe" style="color:transparent"
@@ -87,7 +90,7 @@
                 </div>
             </div>
             <div class="Header_right__R1PDz">
-                <a href="/swap.html" class="button border-btn no-underline">Launch App</a>
+                <a href="https://unisat.io/brc20/%CE%94zr" class="button border-btn no-underline">Mint Now</a>
             </div>
         </div>
         <div class="Header_headerBlock__BvKxA">
@@ -743,17 +746,11 @@
     <footer class="Footer_footer__oaUOW flex-row-center">
         <div class="Footer_footerLinkLineContainer__zGGMx">
             <div style="color:#AAAAAA" class="Footer_flexRowCenter__WJZTF gap32">
-                <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Documentation</a>
-                <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Privacy Policy</a>
-                <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Terms of Service</a>
+                <p style="font-size:15px">© Δzr group 2024 - Inspiring Innovation, Published by Delta_Zyr.</p>
             </div>
         </div>
         <div class="Footer_iconLinks__jpfnI flex-row-center flex-row-center">
-            <a href="#" class="flex-row-v-center " target="_blank" rel="noreferrer">
-                <img alt="Gitbook" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
-                    style="color:transparent" src="./CSS/img/gitbook.svg" />
-            </a>
-            <a href="https://github.com/" class="flex-row-v-center " target="_blank" rel="noreferrer">
+            <a href="https://github.com/deltazyrteam/" class="flex-row-v-center " target="_blank" rel="noreferrer">
                 <img alt="Github" loading="lazy" width="22" height="22" decoding="async" data-nimg="1"
                     style="color:transparent" src="./CSS/img/icon-github.svg" />
             </a>
@@ -766,7 +763,7 @@
                     style="color:transparent" src="./CSS/img/twitter.svg" />
             </a>
         </div>
-    </footer>
+</footer>
 </body>
 
 </html>
