--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
 <body>
     <div id="__next">
+        <div class="alert-banner">
+            <div class="message">Welcome to DeltaZyr! DeFi Bitcoin Ecosystem with Δzr. Follow us on <a style="text-decoration: underline" href="https://twitter.com/Delta_zyr" target="_blank">Twitter</a> for the official launch date. Have a nice day!</div>
+        </div>
         <div class="Header_header__R_kkv" style="background:rgba(255, 151, 24, 0.3)">
             <div class="Header_headerLeft__5o9CR flex-row-v-center"><img alt="logo" loading="lazy" width="100"
                 height="80" decoding="async" data-nimg="1" class="Header_bigLogo__GemIe" style="color:transparent"
@@ -64,11 +67,8 @@
                 </div>                                 
             </div>
             <div class="Header_right__R1PDz">
-                <a href="/pools.html" class="button border-btn no-underline">Launch App</a>
+                <a target="_blank" href="https://unisat.io/brc20/%CE%94zr" class="button border-btn no-underline">Mint Now</a>
             </div>
-        </div>
-        <div class="Header_headerBlock__BvKxA">
-            <div class="Header_bodyBg__KCRgW"></div>
         </div>
         <div class="main-container home">
             <div class="home-banner mt64 atom-banner">
@@ -97,22 +97,27 @@
                 <div class="chain-list-item" style="justify-content: center">
                     <div class="chain-list-item__right">
                       <span class="chain-name">Transaction</span>
-                      <span class="chain-name">47,888,721</span>                      
+                      <span class="chain-name">Loading...</span>                      
                     </div>
-                </div>
+                </div>                
                 <div class="chain-list-item" style="justify-content: center">
                     <div class="chain-list-item__right">
                       <span class="chain-name">Total Marketcap</span>
-                      <span class="chain-name">$5,864,625,369</span>                      
+                      <span class="chain-name">Loading...</span>                      
                     </div>
                 </div>
                 <div class="chain-list-item" style="justify-content: center">
                     <div class="chain-list-item__right">
                       <span class="chain-name">24H Volume</span>
-                      <span class="chain-name">$10,786,926</span>                      
+                      <span class="chain-name">Loading...</span>                      
                     </div>
                 </div>
             </div>
+            <div class="inscription">
+                <span class="inscription-text">Inscription Is Now Live On Unisat</span>
+                <a target="_blank" href="https://unisat.io/brc20/%CE%94zr" class="button border-btn no-underline">Mint ΔZR</a>
+            </div>
+            
             <div class="flex-row-stretch justify-around radius-20 p48 linear-gradient-container">
                 <div class="linear-gradient-bg"></div>
                 <div class="linear-gradient-blur"></div>
@@ -206,17 +211,11 @@
     <footer class="Footer_footer__oaUOW flex-row-center">
             <div class="Footer_footerLinkLineContainer__zGGMx">
                 <div style="color:#AAAAAA" class="Footer_flexRowCenter__WJZTF gap32">
-                    <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Documentation</a>
-                    <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Privacy Policy</a>
-                    <a style="font-size:15px" href="#" target="_blank" rel="noreferrer">Terms of Service</a>
+                    <p style="font-size:15px">© Δzr group 2024 - Inspiring Innovation, Published by Delta_Zyr.</p>
                 </div>
             </div>
             <div class="Footer_iconLinks__jpfnI flex-row-center flex-row-center">
-                <a href="#" class="flex-row-v-center " target="_blank" rel="noreferrer">
-                    <img alt="Gitbook" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
-                        style="color:transparent" src="./CSS/img/gitbook.svg" />
-                </a>
-                <a href="https://github.com/" class="flex-row-v-center " target="_blank" rel="noreferrer">
+                <a href="https://github.com/deltazyrteam/" class="flex-row-v-center " target="_blank" rel="noreferrer">
                     <img alt="Github" loading="lazy" width="22" height="22" decoding="async" data-nimg="1"
                         style="color:transparent" src="./CSS/img/icon-github.svg" />
                 </a>
