--- a/swap.html
+++ b/swap.html
@@ -49,12 +49,13 @@
             <div class="message">Welcome to our preview! This demo is just a taste of what's to come. Be sure to follow us on <a style="text-decoration: underline" href="https://twitter.com/Delta_zyr" target="_blank">Twitter</a> for the official launch date. Have a nice day!</div>
         </div>
         <div class="Header_header__R_kkv" style="background:rgba(255, 151, 24, 0.3)">
-            <div class="Header_headerLeft__5o9CR flex-row-v-center"><img alt="logo" loading="lazy" width="100"
-                height="80" decoding="async" data-nimg="1" class="Header_bigLogo__GemIe" style="color:transparent"
-                src="./CSS/img/logo + text white.svg" />
-            <img alt="logo" loading="lazy" width="80" height="80" decoding="async" data-nimg="1"
-                class="Header_smallLogo__oEnv8" style="color:transparent" src="./CSS/img/logo + text white.svg" />
-            </div>
+            <div class="Header_headerLeft__5o9CR flex-row-v-center">
+                <a href="/">
+                    <img alt="logo" loading="lazy" width="100" height="80" decoding="async" data-nimg="1"
+                        class="Header_bigLogo__GemIe" style="color:transparent" src="./CSS/img/logo + text white.svg" />
+                    <img alt="logo" loading="lazy" width="80" height="80" decoding="async" data-nimg="1"
+                        class="Header_smallLogo__oEnv8" style="color:transparent" src="./CSS/img/logo + text white.svg" />
+                </a></div>
             <div class="Header_linkContainer__IRPSl">
                 <div class="Header_itemContainer__GamNR "><a class="Header_item__wSa8c" target="" href="/"><svg
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="#ffffff" width="16"
